--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ main {
     flex-shrink: 0;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
-    padding: 15px 13px;
+    padding: 18px 14px;
 }
 
 .conteudo-card {
@@ -115,10 +115,28 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 .conteudo-card img{
     width: 144px;
     height: 87px;
     border-radius: 4px;
+}
+
+.selecionado {
+    border: 5px solid #32B72F;
+    padding: 15px 10px;
+}
+
+.ocultar {
+    display: none;
+}
+
+.selecionado ion-icon{
+    position: absolute;
+    color: #32B72F;
+    bottom: 0px;
+    right: 0px;
+    display: block;
 }
