--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ footer {
     left: 0;
     right: 0;
     background-color: #FFFFFF;
+    text-align: center;
 }
 
 .botao-concluir {
@@ -76,8 +77,15 @@ footer {
     text-decoration: none;
     font-size: 20px;
     border-radius: 50px;
-    padding: 8px 60px;
+    height: 61px;
     margin: 15px 25px;
+    padding: 0 80px;
+    min-width: 350px;
+}
+
+.fechar-pedido-botao {
+    font-weight: 700;
+    background-color: #32B72F;
 }
 
 main {
@@ -104,6 +112,7 @@ main {
     width: 172px;
     background-color: #FFFFFF;
     margin-right: 16px;
+    margin-bottom: 5px;
     flex-shrink: 0;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
@@ -126,6 +135,7 @@ main {
 
 .selecionado {
     border: 5px solid #32B72F;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 15px 10px;
 }
 
