--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h6 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 22px;
     color: #FFFFFF;
 }
 
@@ -54,6 +54,15 @@ header {
     right: 0;
     left: 0;
     z-index: 1;
+}
+
+.flex-sb {
+    display: flex;
+    justify-content: space-between;
+}
+
+.ocultar {
+    display: none;
 }
 
 .conteudo-topo {
@@ -139,14 +148,73 @@ main {
     padding: 15px 10px;
 }
 
-.ocultar {
-    display: none;
-}
-
 .selecionado ion-icon{
     position: absolute;
     color: #32B72F;
     bottom: 0px;
     right: 0px;
     display: block;
+}
+
+.fundo-confirme-pedido {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.popup-confirme-pedido {
+    background-color: #50D074;
+    width: 80%;
+    height: 40%;
+    padding: 10px 25px;
+    text-align: center;
+    border-radius: 9px;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.popup-confirme-pedido p {
+    font-weight: bold;
+}
+
+.pedido-itens {
+    font-size: 22px;
+    color: #FFFFFF;
+    letter-spacing: 1px;
+}
+
+.linha-item {
+    margin-top: 10px;
+}
+
+.linha-total {
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.botao-popup {
+    font-size: 22px;
+    font-weight: 700;
+    border-radius: 100px;
+    border: none;
+}
+
+.botao-tudocerto {
+    color: #50D074;
+    background-color: #FFFFFF;
+    padding: 10px 0;
+}
+
+.botao-cancelar {
+    background-color: #50D074;
+    font-size: 20px;
+    color: #FFFFFF;
 }
