--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,6 @@ header {
     justify-content: space-between;
 }
 
-.ocultar {
-    display: none;
-}
-
 .conteudo-topo {
     padding: 14px 21px;
 }
@@ -148,6 +144,16 @@ main {
     padding: 15px 10px;
 }
 
+.ocultar {
+    display: none;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .selecionado ion-icon{
     position: absolute;
     color: #32B72F;
@@ -162,17 +168,13 @@ main {
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    display: none;
 }
 
 .popup-confirme-pedido {
     background-color: #50D074;
     width: 80%;
     height: 40%;
-    padding: 10px 25px;
+    padding: 5px 20px;
     text-align: center;
     border-radius: 9px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
@@ -217,4 +219,4 @@ main {
     background-color: #50D074;
     font-size: 20px;
     color: #FFFFFF;
-}
+} 
