--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h2 {
     font-family: 'Righteous', cursive;
     font-size: 26px;
     color: #333333;
+    margin-left: 15px;
 }
 
 h3 {
@@ -72,7 +73,6 @@ footer {
     left: 0;
     right: 0;
     background-color: #FFFFFF;
-    text-align: center;
 }
 
 .botao-concluir {
@@ -83,9 +83,7 @@ footer {
     font-size: 20px;
     border-radius: 50px;
     height: 61px;
-    margin: 15px 25px;
-    padding: 0 80px;
-    min-width: 350px;
+    width: 85%;
 }
 
 .fechar-pedido-botao {
@@ -102,7 +100,7 @@ main {
 }
 
 .secao {
-    margin: 25px 0 0 15px;
+    margin-top: 25px;
 }
 
 .container-cards{
@@ -116,12 +114,16 @@ main {
 .card {
     width: 172px;
     background-color: #FFFFFF;
-    margin-right: 16px;
     margin-bottom: 5px;
+    margin-left: 15px;
     flex-shrink: 0;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
     padding: 18px 14px;
+}
+
+.secao .card:last-child {
+    margin-right: 15px;
 }
 
 .conteudo-card {
@@ -219,4 +221,4 @@ main {
     background-color: #50D074;
     font-size: 20px;
     color: #FFFFFF;
-} 
+}
