--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ footer {
     color: #FFFFFF;
     text-decoration: none;
     font-size: 20px;
+    padding: 0 50px;
     border-radius: 50px;
     height: 61px;
     width: 85%;
